feat: read ETag from .aggregate-hash sidecar
VocabulariesDbController now uses the precomputed aggregate hash
written by VocabulariesDbAggregationService as ETag, instead of
re-hashing the 32 MB+ aggregate file on every request. Falls back
to sha256 of the file when the sidecar is missing, so the endpoint
keeps working if a .db is dropped in place manually.